--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 return item.resolution === info.resolution
             })
             createEl(`filterArr: ${JSON.stringify(filterArr)}`);
-            createEl(`wgslLanguageFeatures.size: ${navigator.gpu.wgslLanguageFeatures.size}`);
+            createEl(`wgslLanguageFeatures.size: ${navigator.gpu}`);
             console.log("🚀 info:", info)
             console.log("🚀 filterArr:", filterArr)
         } catch (error) {
@@ -76,7 +76,8 @@
         }
     }
 
-    getPhoneModel()
+    // getPhoneModel()
+    
 </script>
 
 </html>
